--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,63 +1,93 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawerlayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_gravity="center"
-    android:gravity="center"
-    android:orientation="vertical"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    tools:openDrawer="start">
 
-    <com.google.android.material.appbar.MaterialToolbar
-        android:id="@+id/toolbar"
+    <LinearLayout
         android:layout_width="match_parent"
-        app:titleTextColor="@color/white"
-        android:layout_height="?attr/actionBarSize"
-        android:background="#0984e3"
-        android:elevation="4dp"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:orientation="vertical">
+
+        <com.google.android.material.appbar.MaterialToolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="@color/bg_toolbar"
+            android:elevation="4dp"
+            android:paddingTop="15dp"
+            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+            app:contentInsetLeft="0dp"
+            app:contentInsetStart="0dp"
+            app:contentInsetStartWithNavigation="0dp"
+            app:titleMarginStart="0dp"
+            app:titleTextColor="@color/white">
 
 
-   <LinearLayout
-       android:gravity="center_vertical"
-        android:orientation="horizontal"
-       android:layout_width="match_parent"
-       android:layout_height="match_parent">
-       <Spinner
-           android:layout_weight="1"
-           android:popupBackground="#0984e3"
-           android:textColor="@color/white"
-           android:id="@+id/spinner_nav"
-           android:layout_width="120dp"
-           android:layout_height="40dp" />
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
 
-       <SearchView
-            android:gravity="right"
-            android:layout_weight="1"
-           android:layout_width="wrap_content"
-           android:layout_height="wrap_content"/>
-   </LinearLayout>
+                <Spinner
+                    android:id="@+id/spinner_nav"
+                    android:layout_width="wrap_content"
+                    android:layout_height="40dp"
+                    android:popupBackground="#0984e3"
+                    android:textColor="@color/white"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <androidx.appcompat.widget.SearchView
+                    android:id="@+id/searchNav"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="right"
+                    app:iconifiedByDefault="true"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </com.google.android.material.appbar.MaterialToolbar>
+
+        <com.google.android.material.tabs.TabLayout
+            android:id="@+id/tab_layout_activity"
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:background="#0984e3"
+            app:tabIndicatorFullWidth="true"
+            app:tabSelectedTextColor="#f5f6fa"
+            app:tabTextColor="#718093" />
+
+        <androidx.viewpager.widget.ViewPager
+            android:id="@+id/viewpagerHome"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="50dp"
+            app:layout_constraintTop_toBottomOf="@+id/tab_layout_activity" />
+
+    </LinearLayout>
+
+    <com.google.android.material.navigation.NavigationView
+        android:id="@+id/nav_view"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:fitsSystemWindows="true"
+        app:headerLayout="@layout/nav_header"
+        app:itemIconTint="@color/bg_toolbar"
+        app:itemTextColor="@color/black"
+        app:menu="@menu/nav_menu" />
+
+</androidx.drawerlayout.widget.DrawerLayout>
 
 
-
-    </com.google.android.material.appbar.MaterialToolbar>
-
-
-
-    <com.google.android.material.tabs.TabLayout
-        android:background="#0984e3"
-        android:id="@+id/tab_layout_activity"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        app:tabIndicatorFullWidth="true"
-        app:tabSelectedTextColor="@color/bg_fragment_setting" />
-
-    <androidx.viewpager.widget.ViewPager
-        android:id="@+id/viewpagerHome"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/tab_layout_activity" />
-
-
-</LinearLayout>
