--- a/app/src/main/res/layout/password_layout.xml
+++ b/app/src/main/res/layout/password_layout.xml
@@ -1,37 +1,162 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/layoutPassword"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#2ecc71"
     android:gravity="center"
     android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/img_iconApp"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:src="@drawable/ic_launcher_background" />
+    <RelativeLayout
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="10dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:id="@+id/layoutToolbarPassWord"
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/tvName"
+        <ImageView
+           android:layout_alignParentLeft="true"
+
+            android:src="@drawable/ic_finger"
+            android:layout_width="30dp"
+            android:layout_height="30dp"/>
+
+        <ImageView
+            android:layout_alignParentRight="true"
+            android:src="@drawable/ic_password"
+            android:layout_width="30dp"
+            android:layout_height="30dp"/>
+
+
+    </RelativeLayout>
+
+    <LinearLayout
+        android:id="@+id/layoutNameApp"
+        android:gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:text="Draw pattern"
-        android:textColor="#e1b12c"
-        android:textSize="20sp" />
-
-    <com.andrognito.patternlockview.PatternLockView
-        android:id="@+id/pattern_lock_view"
-        android:layout_width="350dp"
-        android:layout_height="350dp"
-        android:padding="8dp"
-        app:correctStateColor="#27ae60"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="100dp"
+        android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:normalStateColor="#7f8c8d"
-        app:wrongStateColor="#e74c3c" />
+        app:layout_constraintTop_toBottomOf="@id/layoutToolbarPassWord">
 
-</LinearLayout>
+        <ImageView
+            android:id="@+id/img_iconApp"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:src="@drawable/ic_launcher_background" />
+        <TextView
+            android:id="@+id/tvName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:text="Draw pattern"
+            android:textColor="#e1b12c"
+            android:textSize="20sp" />
+    </LinearLayout>
+
+
+    <TableLayout
+        android:layout_marginBottom="100dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <TableRow android:layout_marginTop="20dp">
+
+            <Button
+                style="@style/Widget.AppCompat.Button.Borderless"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:text="1" />
+
+            <Button
+                style="@style/Widget.AppCompat.Button.Borderless"
+                android:layout_weight="1"
+                android:text="2" />
+
+            <Button
+                style="@style/Widget.AppCompat.Button.Borderless"
+                android:layout_weight="1"
+                android:text="3" />
+        </TableRow>
+
+        <TableRow
+
+            android:layout_marginTop="20dp">
+
+            <Button
+                style="@style/Widget.AppCompat.Button.Borderless"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:text="4" />
+
+            <Button
+                style="@style/Widget.AppCompat.Button.Borderless"
+                android:layout_weight="1"
+                android:text="5" />
+
+            <Button
+                style="@style/Widget.AppCompat.Button.Borderless"
+                android:layout_weight="1"
+                android:text="6" />
+        </TableRow>
+
+        <TableRow android:layout_marginTop="20dp">
+
+            <Button
+                style="@style/Widget.AppCompat.Button.Borderless"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:text="7" />
+
+            <Button
+                style="@style/Widget.AppCompat.Button.Borderless"
+                android:layout_weight="1"
+                android:text="8" />
+
+            <Button
+                style="@style/Widget.AppCompat.Button.Borderless"
+                android:layout_weight="1"
+                android:text="9" />
+        </TableRow>
+
+        <TableRow
+            android:layout_marginTop="20dp"
+            android:gravity="end">
+
+            <View
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_weight="1" />
+
+            <Button
+                style="@style/Widget.AppCompat.Button.Borderless"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:text="0" />
+
+            <Button
+                style="@style/Widget.AppCompat.Button.Borderless"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:text="9" />
+        </TableRow>
+
+
+    </TableLayout>
+
+
+
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
