--- a/app/src/main/res/drawable/ic_setting.xml
+++ b/app/src/main/res/drawable/ic_setting.xml
@@ -1,9 +1,9 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24">
+    android:width="32dp"
+    android:height="32dp"
+    android:viewportWidth="32"
+    android:viewportHeight="32">
   <path
-      android:fillColor="#FF000000"
-      android:pathData="M22.2,14.4L21,13.7c-1.3,-0.8 -1.3,-2.7 0,-3.5l1.2,-0.7c1,-0.6 1.3,-1.8 0.7,-2.7l-1,-1.7c-0.6,-1 -1.8,-1.3 -2.7,-0.7L18,5.1c-1.3,0.8 -3,-0.2 -3,-1.7V2c0,-1.1 -0.9,-2 -2,-2h-2C9.9,0 9,0.9 9,2v1.3c0,1.5 -1.7,2.5 -3,1.7L4.8,4.4c-1,-0.6 -2.2,-0.2 -2.7,0.7l-1,1.7C0.6,7.8 0.9,9 1.8,9.6L3,10.3C4.3,11 4.3,13 3,13.7l-1.2,0.7c-1,0.6 -1.3,1.8 -0.7,2.7l1,1.7c0.6,1 1.8,1.3 2.7,0.7L6,18.9c1.3,-0.8 3,0.2 3,1.7V22c0,1.1 0.9,2 2,2h2c1.1,0 2,-0.9 2,-2v-1.3c0,-1.5 1.7,-2.5 3,-1.7l1.2,0.7c1,0.6 2.2,0.2 2.7,-0.7l1,-1.7C23.4,16.2 23.1,15 22.2,14.4zM12,16c-2.2,0 -4,-1.8 -4,-4c0,-2.2 1.8,-4 4,-4s4,1.8 4,4C16,14.2 14.2,16 12,16z"/>
+      android:pathData="M27.526,18.036 L27,17.732c-0.626,-0.361 -1,-1.009 -1,-1.732s0.374,-1.371 1,-1.732l0.526,-0.304a2.999,2.999 0,0 0,1.098 -4.098l-1,-1.732a3.003,3.003 0,0 0,-4.098 -1.098L23,7.339a1.977,1.977 0,0 1,-2 0,1.98 1.98,0 0,1 -1,-1.732V5c0,-1.654 -1.346,-3 -3,-3h-2c-1.654,0 -3,1.346 -3,3v0.608a1.98,1.98 0,0 1,-1 1.732,1.98 1.98,0 0,1 -2,0l-0.526,-0.304a3.005,3.005 0,0 0,-4.099 1.098l-1,1.732a2.998,2.998 0,0 0,1.098 4.098l0.527,0.304c0.626,0.361 1,1.009 1,1.732s-0.374,1.371 -1,1.732l-0.526,0.304a2.998,2.998 0,0 0,-1.098 4.098l1,1.732a3.004,3.004 0,0 0,4.098 1.098L9,24.661a1.977,1.977 0,0 1,2 0,1.98 1.98,0 0,1 1,1.732V27c0,1.654 1.346,3 3,3h2c1.654,0 3,-1.346 3,-3v-0.608c0,-0.723 0.374,-1.37 1,-1.732a1.98,1.98 0,0 1,2 0l0.526,0.304a3.005,3.005 0,0 0,4.098 -1.098l1,-1.732a2.998,2.998 0,0 0,-1.098 -4.098zM16,21c-2.757,0 -5,-2.243 -5,-5s2.243,-5 5,-5 5,2.243 5,5 -2.243,5 -5,5z"
+      android:fillColor="#888888"/>
 </vector>
