--- a/app/src/main/res/layout/password_layout.xml
+++ b/app/src/main/res/layout/password_layout.xml
@@ -24,24 +24,26 @@
            android:layout_alignParentLeft="true"
 
             android:src="@drawable/ic_finger"
-            android:layout_width="30dp"
-            android:layout_height="30dp"/>
+            android:layout_width="40dp"
+            android:layout_height="40dp"/>
 
         <ImageView
+            android:id="@+id/imgChangeModeComfirm"
             android:layout_alignParentRight="true"
             android:src="@drawable/ic_password"
-            android:layout_width="30dp"
-            android:layout_height="30dp"/>
+            android:layout_width="40dp"
+            android:layout_height="40dp"/>
 
 
     </RelativeLayout>
 
     <LinearLayout
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
         android:id="@+id/layoutNameApp"
-        android:gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
+        android:gravity="center"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -52,21 +54,44 @@
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:src="@drawable/ic_launcher_background" />
+
         <TextView
-            android:id="@+id/tvName"
+            android:id="@+id/tvNameMode"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:text="Draw pattern"
             android:textColor="#e1b12c"
             android:textSize="20sp" />
+
+        <TextView
+            android:id="@+id/tvShowPassWord"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:inputType="numberPassword"
+            android:textSize="40sp" />
+
+
     </LinearLayout>
 
+    <com.andrognito.patternlockview.PatternLockView
+        android:id="@+id/pattern_lock_view"
+        android:layout_width="350dp"
+        android:layout_height="360dp"
+        android:layout_marginBottom="80dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_centerInParent="true"
+        app:correctStateColor="#44bd32"
+        app:wrongStateColor="#e84118" />
 
     <TableLayout
-        android:layout_marginBottom="100dp"
+        android:id="@+id/tableLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="60dp"
+
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
@@ -74,20 +99,39 @@
         <TableRow android:layout_marginTop="20dp">
 
             <Button
+                android:id="@+id/btn1"
                 style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_gravity="center"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="10dp"
                 android:layout_weight="1"
-                android:text="1" />
+                android:padding="25dp"
+                android:text="1"
+                android:textColor="@color/white"
+                android:textSize="28sp" />
 
             <Button
+                android:id="@+id/btn2"
                 style="@style/Widget.AppCompat.Button.Borderless"
+                android:layout_gravity="center"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="10dp"
                 android:layout_weight="1"
-                android:text="2" />
+                android:padding="25dp"
+                android:text="2"
+                android:textColor="@color/white"
+                android:textSize="28sp" />
 
             <Button
+                android:id="@+id/btn3"
                 style="@style/Widget.AppCompat.Button.Borderless"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="10dp"
                 android:layout_weight="1"
-                android:text="3" />
+                android:padding="25dp"
+                android:text="3"
+                android:textColor="@color/white"
+                android:textSize="28sp" />
         </TableRow>
 
         <TableRow
@@ -95,39 +139,86 @@
             android:layout_marginTop="20dp">
 
             <Button
+                android:id="@+id/btn4"
                 style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_gravity="center"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="10dp"
                 android:layout_weight="1"
-                android:text="4" />
+                android:gravity="center"
+                android:padding="25dp"
+                android:text="4"
+                android:textColor="@color/white"
+                android:textSize="28sp" />
 
             <Button
                 style="@style/Widget.AppCompat.Button.Borderless"
+                android:id="@+id/btn5"
+
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="10dp"
                 android:layout_weight="1"
-                android:text="5" />
+                android:gravity="center"
+                android:padding="25dp"
+                android:text="5"
+                android:textColor="@color/white"
+                android:textSize="28sp" />
 
             <Button
+                android:id="@+id/btn6"
+
                 style="@style/Widget.AppCompat.Button.Borderless"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="10dp"
                 android:layout_weight="1"
-                android:text="6" />
+                android:gravity="center"
+                android:padding="25dp"
+                android:text="6"
+                android:textColor="@color/white"
+                android:textSize="28sp" />
         </TableRow>
 
-        <TableRow android:layout_marginTop="20dp">
+        <TableRow android:layout_marginTop="15dp">
 
             <Button
                 style="@style/Widget.AppCompat.Button.Borderless"
+                android:id="@+id/btn7"
+
                 android:layout_gravity="center"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="10dp"
                 android:layout_weight="1"
-                android:text="7" />
+                android:gravity="center"
+                android:padding="25dp"
+                android:text="7"
+                android:textColor="@color/white"
+                android:textSize="28sp" />
 
             <Button
                 style="@style/Widget.AppCompat.Button.Borderless"
+                android:id="@+id/btn8"
+
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="10dp"
                 android:layout_weight="1"
-                android:text="8" />
+                android:gravity="center"
+                android:padding="25dp"
+                android:text="8"
+                android:textColor="@color/white"
+                android:textSize="28sp" />
 
             <Button
                 style="@style/Widget.AppCompat.Button.Borderless"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="10dp"
                 android:layout_weight="1"
-                android:text="9" />
+                android:gravity="center"
+                android:id="@+id/btn9"
+
+                android:padding="25dp"
+                android:text="9"
+                android:textColor="@color/white"
+                android:textSize="28sp" />
         </TableRow>
 
         <TableRow
@@ -135,6 +226,7 @@
             android:gravity="end">
 
             <View
+
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:layout_weight="1" />
@@ -142,21 +234,30 @@
             <Button
                 style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="0dp"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="10dp"
                 android:layout_weight="1"
-                android:text="0" />
+                android:gravity="center"
+                android:padding="25dp"
+                android:text="0"
+                android:textColor="@color/white"
+                android:textSize="28sp" />
 
             <Button
-                style="@style/Widget.AppCompat.Button.Borderless"
+                android:backgroundTint="@color/white"
+                android:background="@drawable/button_background"
                 android:layout_width="0dp"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="10dp"
                 android:layout_weight="1"
-                android:text="9" />
+                android:gravity="center"
+                android:padding="25dp"
+                android:textColor="@color/white"
+                android:textSize="28sp" />
+
         </TableRow>
 
 
     </TableLayout>
-
-
-
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
