--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -587,6 +587,7 @@
                     android:layout_height="60dp">
 
                     <LinearLayout
+                        android:id="@+id/layout_change_pattern"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_alignParentBottom="true"
