--- a/app/src/main/res/layout/password_layout.xml
+++ b/app/src/main/res/layout/password_layout.xml
@@ -1,7 +1,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/layoutPassword"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/layoutPassword"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#2ecc71"
@@ -9,40 +9,39 @@
     android:orientation="vertical">
 
     <RelativeLayout
+        android:id="@+id/layoutToolbarPassWord"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
         android:layout_marginTop="10dp"
+        android:layout_marginRight="10dp"
+        android:orientation="horizontal"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:id="@+id/layoutToolbarPassWord"
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
-           android:layout_alignParentLeft="true"
-
-            android:src="@drawable/ic_finger"
             android:layout_width="40dp"
-            android:layout_height="40dp"/>
+            android:layout_height="40dp"
+            android:layout_alignParentLeft="true"
+            android:src="@drawable/ic_finger" />
 
         <ImageView
             android:id="@+id/imgChangeModeComfirm"
-            android:layout_alignParentRight="true"
-            android:src="@drawable/ic_password"
             android:layout_width="40dp"
-            android:layout_height="40dp"/>
+            android:layout_height="40dp"
+            android:layout_alignParentRight="true"
+            android:src="@drawable/ic_password" />
 
 
     </RelativeLayout>
 
     <LinearLayout
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
         android:id="@+id/layoutNameApp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
         android:gravity="center"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
@@ -61,7 +60,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:text="Draw pattern"
-            android:textColor="#e1b12c"
+            android:textColor="@color/white"
             android:textSize="20sp" />
 
         <TextView
@@ -74,16 +73,17 @@
 
     </LinearLayout>
 
+
     <com.andrognito.patternlockview.PatternLockView
         android:id="@+id/pattern_lock_view"
         android:layout_width="350dp"
         android:layout_height="360dp"
+        android:layout_centerInParent="true"
         android:layout_marginBottom="80dp"
+        app:correctStateColor="#44bd32"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_centerInParent="true"
-        app:correctStateColor="#44bd32"
         app:wrongStateColor="#e84118" />
 
     <TableLayout
@@ -152,8 +152,8 @@
                 android:textSize="28sp" />
 
             <Button
-                style="@style/Widget.AppCompat.Button.Borderless"
                 android:id="@+id/btn5"
+                style="@style/Widget.AppCompat.Button.Borderless"
 
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="10dp"
@@ -181,9 +181,8 @@
         <TableRow android:layout_marginTop="15dp">
 
             <Button
-                style="@style/Widget.AppCompat.Button.Borderless"
                 android:id="@+id/btn7"
-
+                style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_gravity="center"
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="10dp"
@@ -195,9 +194,8 @@
                 android:textSize="28sp" />
 
             <Button
-                style="@style/Widget.AppCompat.Button.Borderless"
                 android:id="@+id/btn8"
-
+                style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="10dp"
                 android:layout_weight="1"
@@ -208,32 +206,35 @@
                 android:textSize="28sp" />
 
             <Button
+                android:id="@+id/btn9"
                 style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="10dp"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:id="@+id/btn9"
-
                 android:padding="25dp"
                 android:text="9"
                 android:textColor="@color/white"
                 android:textSize="28sp" />
         </TableRow>
 
-        <TableRow
-            android:layout_marginTop="20dp"
-            android:gravity="end">
-
-            <View
-
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:layout_weight="1" />
+        <TableRow android:layout_marginTop="15dp">
 
             <Button
                 style="@style/Widget.AppCompat.Button.Borderless"
-                android:layout_width="0dp"
+                android:layout_gravity="center"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="10dp"
+                android:layout_weight="1"
+                android:enabled="false"
+                android:gravity="center"
+                android:padding="25dp"
+                android:textColor="@color/white"
+                android:textSize="28sp" />
+
+            <Button
+                android:id="@+id/btn0"
+                style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="10dp"
                 android:layout_weight="1"
@@ -244,19 +245,18 @@
                 android:textSize="28sp" />
 
             <Button
-                android:backgroundTint="@color/white"
-                android:background="@drawable/button_background"
-                android:layout_width="0dp"
+                android:id="@+id/btn_clear"
+                style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="10dp"
                 android:layout_weight="1"
+                android:background="@drawable/button_icon_background_selector"
                 android:gravity="center"
                 android:padding="25dp"
                 android:textColor="@color/white"
                 android:textSize="28sp" />
 
         </TableRow>
-
 
     </TableLayout>
 
