--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,6 @@
     <color name="white">#FFFFFFFF</color>
     <color name="bg_fragment_listapp">#27ae60</color>
     <color name="bg_fragment_setting">#c0392b</color>
+    <color name="color_wrong_password">#e74c3c</color>
     <color name="bg_toolbar">#0984e3</color>
 </resources>
