--- a/app/src/main/res/layout/password_layout.xml
+++ b/app/src/main/res/layout/password_layout.xml
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="25dp"
         android:layout_marginRight="10dp"
         android:orientation="horizontal"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -68,7 +68,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:inputType="numberPassword"
-            android:textSize="40sp" />
+            android:textSize="30sp" />
 
 
     </LinearLayout>
@@ -79,7 +79,7 @@
         android:layout_width="350dp"
         android:layout_height="360dp"
         android:layout_centerInParent="true"
-        android:layout_marginBottom="80dp"
+        android:layout_marginBottom="60dp"
         app:correctStateColor="#44bd32"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -91,7 +91,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="60dp"
-
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
@@ -103,9 +102,9 @@
                 style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_gravity="center"
                 android:layout_marginLeft="5dp"
-                android:layout_marginRight="10dp"
+                android:layout_marginRight="7dp"
                 android:layout_weight="1"
-                android:padding="25dp"
+                android:padding="18dp"
                 android:text="1"
                 android:textColor="@color/white"
                 android:textSize="28sp" />
@@ -115,9 +114,9 @@
                 style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_gravity="center"
                 android:layout_marginLeft="5dp"
-                android:layout_marginRight="10dp"
+                android:layout_marginRight="7dp"
                 android:layout_weight="1"
-                android:padding="25dp"
+                android:padding="18dp"
                 android:text="2"
                 android:textColor="@color/white"
                 android:textSize="28sp" />
@@ -126,16 +125,15 @@
                 android:id="@+id/btn3"
                 style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_marginLeft="5dp"
-                android:layout_marginRight="10dp"
+                android:layout_marginRight="7dp"
                 android:layout_weight="1"
-                android:padding="25dp"
+                android:padding="18dp"
                 android:text="3"
                 android:textColor="@color/white"
                 android:textSize="28sp" />
         </TableRow>
 
         <TableRow
-
             android:layout_marginTop="20dp">
 
             <Button
@@ -143,10 +141,10 @@
                 style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_gravity="center"
                 android:layout_marginLeft="5dp"
-                android:layout_marginRight="10dp"
+                android:layout_marginRight="7dp"
+                android:padding="18dp"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:padding="25dp"
                 android:text="4"
                 android:textColor="@color/white"
                 android:textSize="28sp" />
@@ -154,25 +152,24 @@
             <Button
                 android:id="@+id/btn5"
                 style="@style/Widget.AppCompat.Button.Borderless"
-
+                android:layout_gravity="center"
                 android:layout_marginLeft="5dp"
-                android:layout_marginRight="10dp"
+                android:layout_marginRight="7dp"
+                android:padding="18dp"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:padding="25dp"
                 android:text="5"
                 android:textColor="@color/white"
                 android:textSize="28sp" />
 
             <Button
                 android:id="@+id/btn6"
-
                 style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_marginLeft="5dp"
-                android:layout_marginRight="10dp"
+                android:layout_marginRight="7dp"
+                android:padding="18dp"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:padding="25dp"
                 android:text="6"
                 android:textColor="@color/white"
                 android:textSize="28sp" />
@@ -188,7 +185,7 @@
                 android:layout_marginRight="10dp"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:padding="25dp"
+                android:padding="18dp"
                 android:text="7"
                 android:textColor="@color/white"
                 android:textSize="28sp" />
@@ -197,10 +194,10 @@
                 android:id="@+id/btn8"
                 style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_marginLeft="5dp"
-                android:layout_marginRight="10dp"
+                android:layout_marginRight="7dp"
+                android:padding="18dp"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:padding="25dp"
                 android:text="8"
                 android:textColor="@color/white"
                 android:textSize="28sp" />
@@ -209,10 +206,10 @@
                 android:id="@+id/btn9"
                 style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_marginLeft="5dp"
-                android:layout_marginRight="10dp"
+                android:layout_marginRight="7dp"
+                android:padding="18dp"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:padding="25dp"
                 android:text="9"
                 android:textColor="@color/white"
                 android:textSize="28sp" />
@@ -236,23 +233,26 @@
                 android:id="@+id/btn0"
                 style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_marginLeft="5dp"
-                android:layout_marginRight="10dp"
+                android:layout_marginRight="7dp"
+                android:padding="18dp"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:padding="25dp"
                 android:text="0"
                 android:textColor="@color/white"
                 android:textSize="28sp" />
 
             <Button
+                android:drawableTint="@color/white"
+                android:tint="@color/white"
+                android:backgroundTint="@color/white"
                 android:id="@+id/btn_clear"
                 style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_marginLeft="5dp"
-                android:layout_marginRight="10dp"
+                android:layout_marginRight="7dp"
+                android:padding="18dp"
                 android:layout_weight="1"
                 android:background="@drawable/button_icon_background_selector"
                 android:gravity="center"
-                android:padding="25dp"
                 android:textColor="@color/white"
                 android:textSize="28sp" />
 
