--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -158,7 +158,8 @@
                         android:gravity="center">
 
                         <LinearLayout
-                            android:layout_width="wrap_content"
+                            android:id="@+id/itemlayoutLockEngine"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_alignParentStart="true"
                             android:gravity="center"
@@ -170,6 +171,7 @@
                                 android:src="@drawable/ic_performance" />
 
                             <TextView
+                                android:layout_weight="2"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginLeft="15dp"
@@ -178,17 +180,23 @@
                                 android:textSize="17sp"
                                 android:textStyle="bold" />
 
+                            <CheckBox
+                                android:id="@+id/cbImproved"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_alignParentEnd="true"
+                                android:checked="false" />
+
                         </LinearLayout>
 
 
-                        <CheckBox
-                            android:layout_marginRight="10dp"
-                            android:id="@+id/cbImproved"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_alignParentEnd="true"
-                            android:checked="false" />
 
+                        <View
+                            android:layout_below="@+id/itemlayoutLockEngine"
+                            android:layout_width="match_parent"
+                            android:layout_height="0.1dp"
+                            android:layout_marginLeft="40dp"
+                            android:background="#888888" />
 
 
 
@@ -270,6 +278,7 @@
 
 
                     <RelativeLayout
+                        android:id="@+id/layoutFingerPrint"
                         android:clickable="true"
                         android:background="?selectableItemBackground"
                         android:layout_width="wrap_content"
@@ -277,7 +286,7 @@
 
                         <LinearLayout
                             android:padding="10dp"
-                            android:id="@+id/layoutFingerPrint"
+
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:foreground="?android:attr/selectableItemBackground"
@@ -354,11 +363,8 @@
                             android:layout_marginRight="10dp"
                             android:src="@drawable/ic_lock_circle" />
 
-
                         <LinearLayout
-                            android:clickable="true"
-                            android:background="?selectableItemBackground"
-                            android:layout_width="match_parent"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:gravity="center_vertical"
                             android:orientation="vertical">
