--- a/app/src/main/res/layout/item_layout_app.xml
+++ b/app/src/main/res/layout/item_layout_app.xml
@@ -26,7 +26,7 @@
         android:id="@+id/imgSetting"
         android:layout_width="30dp"
         android:layout_height="30dp"
-        android:src="@drawable/ic_setting" />
+        android:src="@drawable/ic_setting_finger" />
 
     <View
         android:layout_width="30dp"
