--- a/app/src/main/res/layout/password_layout_recent.xml
+++ b/app/src/main/res/layout/password_layout_recent.xml
@@ -17,13 +17,6 @@
         android:layout_marginRight="15dp"
         android:orientation="horizontal">
 
-        <ImageView
-            android:id="@+id/imgFingerMode"
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:layout_alignParentStart="true"
-            android:layout_centerInParent="true"
-            android:src="@drawable/ic_finger" />
 
         <ImageView
             android:id="@+id/imgChangeModeComfirm"
@@ -79,9 +72,18 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="bottom"
-
             android:gravity="center"
             android:orientation="horizontal">
+
+
+            <com.andrognito.patternlockview.PatternLockView
+                android:id="@+id/pattern_lock_view"
+                android:layout_width="350dp"
+                android:layout_height="350dp"
+                android:layout_centerInParent="true"
+                app:correctStateColor="#44bd32"
+                app:wrongStateColor="#e84118" />
+
 
             <TableLayout
                 android:id="@+id/tableLayout"
@@ -95,7 +97,6 @@
                         style="@style/Widget.AppCompat.Button.Borderless"
                         android:layout_gravity="center"
                         android:layout_weight="1"
-                        android:onClick="onNumberClick"
                         android:padding="16dp"
                         android:text="1"
                         android:textColor="@color/white"
@@ -106,7 +107,6 @@
                         style="@style/Widget.AppCompat.Button.Borderless"
                         android:layout_gravity="center"
                         android:layout_weight="1"
-                        android:onClick="onNumberClick"
                         android:padding="16dp"
                         android:text="2"
                         android:textColor="@color/white"
@@ -116,7 +116,6 @@
                         android:id="@+id/btn3"
                         style="@style/Widget.AppCompat.Button.Borderless"
                         android:layout_weight="1"
-                        android:onClick="onNumberClick"
                         android:padding="16dp"
                         android:text="3"
                         android:textColor="@color/white"
@@ -173,7 +172,6 @@
                         android:layout_gravity="center"
                         android:layout_weight="1"
                         android:gravity="center"
-                        android:onClick="onNumberClick"
                         android:padding="16dp"
                         android:text="7"
                         android:textColor="@color/white"
@@ -184,7 +182,6 @@
                         style="@style/Widget.AppCompat.Button.Borderless"
                         android:layout_weight="1"
                         android:gravity="center"
-                        android:onClick="onNumberClick"
                         android:padding="16dp"
                         android:text="8"
                         android:textColor="@color/white"
@@ -195,7 +192,6 @@
                         style="@style/Widget.AppCompat.Button.Borderless"
                         android:layout_weight="1"
                         android:gravity="center"
-                        android:onClick="onNumberClick"
                         android:padding="16dp"
                         android:text="9"
                         android:textColor="@color/white"
@@ -219,43 +215,32 @@
                     <Button
                         android:id="@+id/btn0"
                         style="@style/Widget.AppCompat.Button.Borderless"
-                        android:layout_marginLeft="3dp"
-                        android:layout_marginRight="4dp"
+                        android:layout_marginStart="3dp"
+                        android:layout_marginEnd="4dp"
                         android:layout_weight="1"
                         android:gravity="center"
-                        android:onClick="onNumberClick"
                         android:padding="16dp"
                         android:text="0"
                         android:textColor="@color/white"
                         android:textSize="23sp" />
 
 
-                    <com.google.android.material.button.MaterialButton
+                    <Button
                         android:id="@+id/btnClear"
                         style="@style/Widget.AppCompat.Button.Borderless"
-                        android:layout_marginLeft="3dp"
-                        android:layout_marginRight="4dp"
+                        android:layout_marginStart="3dp"
+                        android:layout_marginEnd="4dp"
+                        android:padding="16dp"
                         android:layout_weight="1"
                         android:gravity="center"
-                        android:onClick="onClearClick"
-                        android:padding="16dp"
+                        android:drawableStart="@drawable/ic_clear"
+                         android:paddingStart="50dp"
                         android:textColor="@color/white"
-                        android:textSize="20sp"
-                        app:icon="@drawable/ic_clear"
-                        app:iconGravity="textStart"
-                        app:iconSize="23sp" />
+                        android:textSize="23sp" />
 
                 </TableRow>
 
             </TableLayout>
-
-            <com.andrognito.patternlockview.PatternLockView
-                android:id="@+id/pattern_lock_view"
-                android:layout_width="350dp"
-                android:layout_height="350dp"
-                android:layout_centerInParent="true"
-                app:correctStateColor="#44bd32"
-                app:wrongStateColor="#e84118" />
 
         </LinearLayout>
 
