--- a/app/src/main/res/drawable/ic_lock.xml
+++ b/app/src/main/res/drawable/ic_lock.xml
@@ -1,18 +1,18 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="512dp"
-    android:height="512dp"
-    android:viewportWidth="512"
-    android:viewportHeight="512">
+    android:width="64dp"
+    android:height="64dp"
+    android:viewportWidth="64"
+    android:viewportHeight="64">
   <path
-      android:fillColor="#FF000000"
-      android:pathData="M380,450H143a15,15 0,0 1,-15 -15V213.66a15,15 0,0 1,15 -15H380a15,15 0,0 1,15 15V435A15,15 0,0 1,380 450ZM158,420H365V228.66H158Z"/>
+      android:pathData="M46.3,28.7h-3v-6.4c0,-6.2 -5.1,-11.3 -11.3,-11.3c-6.2,0 -11.3,5.1 -11.3,11.3v6.4h-3v-6.4c0,-7.9 6.4,-14.3 14.3,-14.3s14.3,6.4 14.3,14.3L46.3,28.7"
+      android:fillColor="#134563"/>
   <path
-      android:fillColor="#FF000000"
-      android:pathData="M351.66,228.66L171.41,228.66a15,15 0,0 1,-15 -15L156.41,153.12a105.13,105.13 0,0 1,210.25 0v60.54A15,15 0,0 1,351.66 228.66ZM186.41,198.66L336.66,198.66L336.66,153.12a75.13,75.13 0,0 0,-150.25 0Z"/>
+      android:pathData="M44.8,55.9h-25.6c-2.6,0 -4.8,-2.2 -4.8,-4.8v-19.2c0,-2.6 2.2,-4.8 4.8,-4.8h25.6c2.6,0 4.8,2.2 4.8,4.8v19.2C49.6,53.8 47.4,55.9 44.8,55.9L44.8,55.9zM19.2,30.3c-0.9,0 -1.6,0.7 -1.6,1.6v19.2c0,0.9 0.7,1.6 1.6,1.6h25.6c0.9,0 1.6,-0.7 1.6,-1.6v-19.2c0,-0.9 -0.7,-1.6 -1.6,-1.6L19.2,30.3L19.2,30.3z"
+      android:fillColor="#134563"/>
   <path
-      android:fillColor="#FF000000"
-      android:pathData="M261.54,352.67a46.5,46.5 0,1 1,46.5 -46.5A46.55,46.55 0,0 1,261.54 352.67ZM261.54,289.67a16.5,16.5 0,1 0,16.5 16.5A16.52,16.52 0,0 0,261.54 289.67Z"/>
+      android:pathData="M35.2,36.7c0,1.8 -1.4,3.2 -3.2,3.2s-3.2,-1.4 -3.2,-3.2s1.4,-3.2 3.2,-3.2S35.2,35 35.2,36.7"
+      android:fillColor="#134563"/>
   <path
-      android:fillColor="#FF000000"
-      android:pathData="M261.54,389a15,15 0,0 1,-15 -15V337.67a15,15 0,1 1,30 0V374A15,15 0,0 1,261.54 389Z"/>
+      android:pathData="M32.8,36.7l-1.6,0l-1.6,9.6l4.8,0l-1.6,-9.6"
+      android:fillColor="#134563"/>
 </vector>
