--- a/app/src/main/res/layout/dialog_pin_password.xml
+++ b/app/src/main/res/layout/dialog_pin_password.xml
@@ -3,8 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginLeft="15dp"
-    android:layout_marginRight="17dp"
+    android:layout_marginLeft="20dp"
+    android:layout_marginRight="20dp"
     android:background="@color/white"
     android:orientation="vertical"
     android:paddingTop="10dp">
@@ -22,7 +22,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-
     <TextView
         android:id="@+id/tvPassword"
         android:inputType="numberPassword"
@@ -36,10 +35,9 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-
     <LinearLayout
         android:layout_margin="10dp"
-        android:layout_width="330dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="15dp"
@@ -153,19 +151,14 @@
 
             <TableRow android:layout_marginTop="10dp">
 
-                <com.google.android.material.button.MaterialButton
+                <Button
                     android:id="@+id/btnCheck"
                     style="@style/Widget.AppCompat.Button.Borderless"
-                    android:layout_marginLeft="3dp"
-                    android:layout_marginRight="4dp"
                     android:layout_weight="1"
-                    android:gravity="center"
-                    android:padding="6dp"
-                    android:textSize="20sp"
-                    app:icon="@drawable/ic_check"
+                    android:paddingRight="40dp"
+                    android:drawableRight="@drawable/ic_check"
                     app:iconTint="@color/black"
-                    app:iconGravity="textStart"
-                    app:iconSize="23sp" />
+                    app:iconGravity="textStart" />
 
                 <Button
                     android:id="@+id/btn0"
@@ -179,24 +172,20 @@
                     android:textColor="@color/black"
                     android:textSize="20sp" />
 
-
-                <com.google.android.material.button.MaterialButton
+                <Button
+                    android:backgroundTint="@color/black"
                     android:id="@+id/btnClear"
                     style="@style/Widget.AppCompat.Button.Borderless"
-                    android:layout_marginLeft="3dp"
-                    android:layout_marginRight="4dp"
                     android:layout_weight="1"
-                    android:gravity="center"
-                    android:padding="6dp"
-                    android:textSize="20sp"
-                    app:icon="@drawable/ic_clear"
-                    app:iconTint="@color/black"
-                    app:iconGravity="textStart"
-                    app:iconSize="23sp" />
+                    android:paddingRight="40dp"
+                    android:drawableRight="@drawable/ic_clear"
+                    android:textColor="@color/black"
+                    android:textSize="20sp" />
 
             </TableRow>
 
         </TableLayout>
+
 
         <ImageView
             android:id="@+id/state_true_pattern"
@@ -206,11 +195,7 @@
             android:layout_marginTop="15dp"
             android:src="@drawable/check_true" />
 
-
-
-
     </LinearLayout>
-
 
     <TextView
         android:id="@+id/tvCancel"
