--- a/app/src/main/res/layout/item_layout_app.xml
+++ b/app/src/main/res/layout/item_layout_app.xml
@@ -15,28 +15,28 @@
 
     <TextView
         android:id="@+id/tv_nameApp"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
+        android:layout_marginLeft="15dp"
         android:layout_weight="1"
         android:text="Discord"
+        android:textColor="@color/black"
         android:textSize="20sp" />
 
     <ImageView
+        android:layout_margin="10dp"
         android:id="@+id/imgSetting"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:src="@drawable/ic_setting_finger" />
 
-    <View
-        android:layout_width="30dp"
-        android:layout_height="1dp" />
+
 
     <ImageView
+        android:layout_margin="10dp"
         android:id="@+id/imgClock"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:src="@drawable/ic_lock" />
-
 
 </LinearLayout>
