--- a/app/src/main/res/layout/password_layout_recent.xml
+++ b/app/src/main/res/layout/password_layout_recent.xml
@@ -75,7 +75,6 @@
             android:gravity="center"
             android:orientation="horizontal">
 
-
             <com.andrognito.patternlockview.PatternLockView
                 android:id="@+id/pattern_lock_view"
                 android:layout_width="350dp"
@@ -200,6 +199,8 @@
 
                 <TableRow android:layout_marginTop="10dp">
 
+
+
                     <Button
                         style="@style/Widget.AppCompat.Button.Borderless"
                         android:layout_gravity="center"
@@ -208,7 +209,6 @@
                         android:layout_weight="1"
                         android:enabled="false"
                         android:gravity="center"
-                        android:padding="18dp"
                         android:textColor="@color/white"
                         android:textSize="20sp" />
 
@@ -237,6 +237,17 @@
                          android:paddingStart="50dp"
                         android:textColor="@color/white"
                         android:textSize="23sp" />
+
+                </TableRow>
+
+                <TableRow>
+
+                    <CheckBox
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
+                        android:button="@null"
+                        android:checked="false"
+                        android:background="@drawable/bg_selected_checkbox" />
 
                 </TableRow>
 
