--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="bg_fragment_listapp">#27ae60</color>
@@ -7,4 +8,10 @@
     <color name="color_wrong_password">#e74c3c</color>
     <color name="bg_toolbar">#0984e3</color>
     <color name="bg_btn">#00C0FF</color>
+    <color name="purple_500">#FF6200EE</color>
+    <color name="purple_700">#FF3700B3</color>
+    <color name="teal_200">#FF03DAC5</color>
+    <color name="teal_700">#FF018786</color>
+    <color name="bg_btn_cancle">#636e72</color>
+
 </resources>
